--- a/views/kitchen.html
+++ b/views/kitchen.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nationsköket</title>
-  <link rel="stylesheet" href="css/nationPub.css">
+  <link rel="stylesheet" href="css/kitchen.css">
 
   <script src="data/menu.js"></script>
   <script src="js/kit_view.js"></script>
@@ -13,6 +13,7 @@
   </script>
 </head>
 <body>
+  <section id="kitchenLeft">
   <div id="orders">
     <h1>{{ uiLabels.ordersInQueue }}</h1>
     <ol>
@@ -29,18 +30,18 @@
         {{ key }} : {{ item.orderItems.join(', ') }}
       </li>
     </ol>
+
   </div>
+  
+  </section>
+  <section id="kitchenRight">
+  <img src="pub_map_v1.jpg" height="200" width="200">
+  
+  <div id="order">
+    <h3 id="batch">Batches </h3>
+  
+  </section>
 
-    <img src="pub_map_v1.jpg" height="200" width="200">
-      
-    <div id="order">
-    <h3>Batches</h3>
-    
-    <section id="batch">
-    </section>
-
-    </div>
-      
   </div>
 
 
