--- a/views/diner.html
+++ b/views/diner.html
@@ -110,12 +110,12 @@
       <table id="orderTable">
         <thead>
           <tr>
-            <td>Antal</td><td>Vara</td><td>Pris</td>
+            <td>Antal</td><td>Vara</td><td>Extra</td><td>Pris</td>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <td></td><td></td><td id="totalPrice">0</td>
+            <td></td><td colspan="2">Total:</td><td id="totalPrice">0</td>
           </tr>
         </tfoot>
       </table>
