--- a/public/css/nationPub.css
+++ b/public/css/nationPub.css
@@ -9,6 +9,10 @@ head{
 }
 
 
+body{
+    background-image: url("https://s-media-cache-ak0.pinimg.com/564x/4d/76/78/4d76780ab476229a2a26018f82bac283.jpg");
+}
+
 h1{
  
  color: black; 
