--- a/public/css/kitchen.css
+++ b/public/css/kitchen.css
@@ -11,15 +11,9 @@ head{
 body{
 	background-image: url("https://s-media-cache-ak0.pinimg.com/564x/4d/76/78/4d76780ab476229a2a26018f82bac283.jpg");
 	width: 100%;
-
-	
-    /*height: auto; http://pre09.deviantart.net/1080/th/pre/i/2013/002/5/2/pattern__junk_food_by_cup_kayke-d5q7931.jpg
-	/*background-repeat: repeat; https://s-media-cache-ak0.pinimg.com/564x/b4/50/49/b450497d0c7937a6efce455b151fe05e.jpg*/
-    /*<!--no-repeat-->https://s-media-cache-ak0.pinimg.com/564x/a9/7a/61/a97a61d1722cf9490a9afdb2b6b9b207.jpg*/
 }
 
 h1{
- 
  color: black; 
  padding: 50px 45px 20px;
  }
@@ -29,11 +23,11 @@ section{
     text-align: center;
 }
 
+#orderOnWay{
 
+}
 
-#kitchenLeft{
-
-    float: left;
+#orderDone{
 }
 
 #batch{
@@ -42,8 +36,13 @@ section{
 }
 
 #orders{
+	float: left;
 	background-color: white;
     border: 10px groove black;
+}
+
+#picpic{
+	border: 10px groove black;
 
 }
 
