--- a/views/kitchen.html
+++ b/views/kitchen.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <section id="orders">
-  <div id="oderOnWay">
+  <div id="orderOnWay">
     <h1>{{ uiLabels.ordersInQueue }}</h1>
     <ol>
       <li v-for="(item, key) in orders" v-if="!item.done"> 
@@ -36,7 +36,7 @@
   
   </section>
   <section id="kitchenRight">
-  <img id="picpic" src="pub_map_v1.jpg" height="200" width="200">
+  <img id="picpic" src="pub_map_v1.jpg" height="300" width="300">
   
   <div id="order">
     <h3 id="batch">Batches </h3>
