Added buttons for incrementing/decrementing amount

--- a/views/diner.html
+++ b/views/diner.html
@@ -106,7 +106,7 @@
     
 
 
-      <table border="1" bgcolor="white">
+      <table border="1" bgcolor="white" id="currentOrderOverlord">
         <thead><tr><td>Mat:</td><td>Dryck:</td></tr></thead>
         <tr>
           <td>
