--- a/public/css/kitchen.css
+++ b/public/css/kitchen.css
@@ -6,12 +6,12 @@ head{
  height: 200px;
  overflow:hidden;
 }
-
+/*
 body{
-	background-image: url("https://s-media-cache-ak0.pinimg.com/564x/a9/7a/61/a97a61d1722cf9490a9afdb2b6b9b207.jpg");
-	/*https://s-media-cache-ak0.pinimg.com/564x/4d/76/78/4d76780ab476229a2a26018f82bac283.jpg*/
+	/*background-image: url("https://s-media-cache-ak0.pinimg.com/564x/a9/7a/61/a97a61d1722cf9490a9afdb2b6b9b207.jpg");
+	/*https://s-media-cache-ak0.pinimg.com/564x/4d/76/78/4d76780ab476229a2a26018f82bac283.jpg
 }
-
+*/
 h1{
  color: black; 
  padding: 50px 45px 20px;
