--- a/public/css/nationPub.css
+++ b/public/css/nationPub.css
@@ -31,9 +31,14 @@ h1{
        
 }
 
+#ordering{
+    height: 100%;
+    float: left;
+}
+
 #order{
     position:fixed;
-    width: 300px;
+    width: 425px;
     height: 100%;
     right:0px;
     top: 0px;
@@ -45,7 +50,20 @@ h1{
    border-radius: 10px 10px 10px 10px;
 }
 
-
+#food{
+    float: left;
+    width:36.5%;
+    height:560px;
+    left:10px;
+    top:10px;
+   background-color: gold;
+   color: black;
+   border-width: 10px;
+   border-color: gold;
+   border-style: outset;
+   border-radius: 10px 10px 10px 10px;
+}
+/*
 #tableFood{
 
     width:40%;
@@ -60,9 +78,10 @@ h1{
    border-radius: 10px 10px 10px 10px;
       
 }
-
+*/
 #tableDrink{
-    width:50%;
+    float: left;
+    width:73.8  %;
     height:auto;
     right:10px;
     top:10px;
@@ -74,6 +93,7 @@ h1{
    border-radius: 10px 10px 10px 10px;
 }
 
+/*
 #sideorderTable{
     position: fixed;
     left:500px;
@@ -88,13 +108,13 @@ h1{
    border-radius: 10px 10px 10px 10px;
       
 }
-
+*/
 
 #showTable{
-    position: fixed;
-    width: 15%;
-    left:45%;
-    bottom:90px;
+    float: left;
+
+    width: 60.5%;
+    height: 560px;
     background-color: gold;
    color: black;
    border-width: 10px;
