--- a/views/diner.html
+++ b/views/diner.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/nationPub.css">
   <script src="data/menu.js"></script>
   <script src="js/drinks.js"></script>
-  <!--  <script type="text/javascript" src="data/menu.json"></script> DOESN'T WORK  -->
 
   <script>
     window.onload = docLoaded(indexPageLoaded);
@@ -33,7 +32,7 @@
       
           <!-- JOEL: Added tables -->
     <div id=showTable>
-    <select v-model="selected" id="tableId">
+    <select type="radio" v-model="selected" id="tableId">
       <option v-for="option in options" v-bind:value="option.value">
         {{ option.text }}
       </option>
@@ -55,39 +54,6 @@
       
       
     </div>  
-      
-
-
-    <!--<div v-for="menuitem in menu.foods">
-      <h2>
-        <label>
-          <input type="checkbox" v-model="mainDish" :value="menuitem.label" />
-          {{menuitem.label}}, {{menuitem.price}}:-
-        </label>
-      </h2> 
-      <div>
-        Extra: 
-        <label v-for="detail in menuitem.details">
-          <input type="checkbox" v-model="extras" :value="menuitem.label + '::' + detail.extra" />
-          {{detail.extra}}, {{detail.price}}:-
-        </label>      
-      </div>
-    </div> -->
-   
-
-    <!--<label v-for="menuitem in menu.sideorders">
-      <input type="checkbox" name="item[]" :value="menuitem.label" />
-      {{menuitem.label}}, {{menuitem.price}}:-
-    </label>-->
-    
-
-    <!--<label v-for="menuitem in menu.drinks">
-      
-      <input type="checkbox" name="item[]" :value="menuitem.label" />
-      {{menuitem.label}}, {{menuitem.size}} cl, {{menuitem.price}}:-
-
-    </label>-->
-
 
 
     <!--
@@ -106,7 +72,6 @@
     <div id="order">
     
     
-<!-- <thead></thead> -->
 
       <table border="1" bgcolor="white" id="currentOrderOverlord" width="425px">
         <tr><td colspan="2" size="2"><p><font size="6">Nuvarande beställning</font></p></td></tr>
@@ -120,11 +85,6 @@
                     <td>Antal</td><td>Vara</td><td>Extra</td><td>Pris</td>
                   </tr>
                 </thead>
-                <tfoot>
-                  <tr>
-                    <td></td><td colspan="2">Total:</td><td id="totalPrice">0</td>
-                  </tr>
-                </tfoot>
               </table>
             </section>
           </td>
@@ -141,11 +101,6 @@
                     <td>Antal</td><td colspan="2">Vara</td><td>Pris</td>
                   </tr>
                 </thead>
-                <tfoot>
-                  <tr>
-                    <td></td><td colspan="2">Total:</td><td id="totalDrink">0</td>
-                  </tr>
-                </tfoot>
               </table>
             </section>
           </td>
