update js for changes in table

--- a/views/diner.html
+++ b/views/diner.html
@@ -41,7 +41,7 @@
 		<form>
 			<div v-for="option in options">
 					 <input id="{{option.value}}" v-bind:value="option.value" type="radio" name="table">
-					 <label for="{{option.value}}">{{option.value}}</label>
+					 <label for="{{option.value}}">{{option.text}}</label>
 			</div>
 		</form>
 		
