--- a/views/diner.html
+++ b/views/diner.html
@@ -37,18 +37,21 @@
     <!--     {{ option.text }} -->
     <!--   </option> -->
     <!-- </select> -->
-		
-		<form>
+    <form id="bord">
 			<div v-for="option in options">
 					 <input id="{{option.value}}" v-bind:value="option.value" type="radio" name="table">
 					 <label for="{{option.value}}">{{option.text}}</label>
 			</div>
-		</form>
+    </form>
 		
-    <button onclick="show_layout('pub_map_v1.jpg', 1);">Layout 1</button>
-    <button onclick="show_layout('pub_map_v2.jpg', 2);">Layout 2</button>
+    <button onclick="show_layout('pub_map_v1.jpg', 1);" id= "button1">Layout 1</button>
+    <button onclick="show_layout('pub_map_v2.jpg', 2);" id= "button2">Layout 2</button>
+        
+    
     <div id="layout"></div>
-    <br/><br/>
+    
+     
+    <!--<br/><br/>-->
     </div>
       
       
