remove batches/button

--- a/views/kitchen.html
+++ b/views/kitchen.html
@@ -38,23 +38,20 @@
   <section id="kitchenRight">
   <img id="picpic" src="pub_map_v1.jpg" height="500" width="500">
   
-  <div id="order">
-    <h3 id="batch">Batches </h3>
-  </div>
+  <!-- <div id="order"> -->
+  <!--   <h3 id="batch">Batches </h3> -->
+  <!-- </div> -->
   
   </section>
 
-  <div id="GoBack">
-  <button onclick="goBack()" id="Kbutton">Tillbaka till Matsalen</button>
-  </div>
-  <script>
-  function goBack() {
-    window.history.back();
-  }
-  </script>
-
-
-
+  <!-- <div id="GoBack"> -->
+  <!-- <button onclick="goBack()" id="Kbutton">Tillbaka till Matsalen</button> -->
+  <!-- </div> -->
+  <!-- <script> -->
+  <!-- function goBack() { -->
+  <!--   window.history.back(); -->
+  <!-- } -->
+  <!-- </script> -->
 
   <script src="js/kit_view.js"></script>
   <script src="/vue/vue.js"></script>
