--- a/views/kitchen.html
+++ b/views/kitchen.html
@@ -24,6 +24,7 @@
         </button>
       </ul>
     </ol>
+    <!--
       <div id="divorderDone">
         <h1>{{ uiLabels.ordersFinished }}</h1>
     <ol>
@@ -33,15 +34,20 @@
     </ol>
     </div>
   </div>
-  
+  -->
   </section>
   <section id="kitchenRight">
-  <img id="picpic" src="pub_map_v1.jpg" height="500" width="500">
-  
+   <button class="fancybox" onclick="show_layout('pub_map_v1.jpg', 1);">Layout 1</button>
+    <button onclick="show_layout('pub_map_v2.jpg', 2);">Layout 2</button>
+    <div id="layout"></div>
+    <br/><br/>
+
+  <!--<img id="picpic" src="pub_map_v1.jpg" height="500" width="500">-->
+  <!--
   <div id="order">
     <h3 id="batch">Batches </h3>
   </div>
-  
+  -->
   </section>
 
   <div id="GoBack">
